tests/invalid_programs/for2.jas
// Expect in after for variable.

for i 1..10 { println(i); }
